# glintfx

./: .bigtech-porte  .gitattributes  .gitignore  .gitleaksignore  AGENTS.md  AUDITORIAS.md  AUDIT_FIND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  TESTES.md  TODO.md
.forgejo/workflows/: ci.yml  core-ci.yml  heavy.yml  nightly.yml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  core-ci.yml  nightly.yml  windows-atoms.yml
.superpowers/sdd/: lw6-ci-report.md
consumer-example/: CMakeLists.txt  main.cpp  showcase.rml
consumer-example-embed/: CMakeLists.txt  contract_scene.rcss  contract_scene.rml  main.cpp
docs/: GUIA_INICIANTE.md  RELEASE_CHECKLIST.md  audio.md  draw2d.md  effects.md  embed-integration.md  gamepad.md  getting-started.md  packaging.md  troubleshooting.md  window-modes.md
docs/adr/: 0001-syscall-layer-style.md  0002-error-contract.md  0003-internal-abi.md  0004-allocator-strategy.md  0005-elf-layout.md  0006-layered-hybrid-architecture.md  0007-license-mpl-2.0.md  0008-embed-guest-mode.md  0009-internalization-boundary.md  0010-image-tint-luminance-key.md  0011-soft-font-flip.md  0012-backdrop-capture.md  0013-gl-symbol-boundary.md  0015-framework-2d-atomized-architecture.md  0016-gamepad-atom.md  0017-draw2d-module.md  0018-draw2d-text.md  README.md
docs/auditoria/: AUD-ABI.md  AUD-C0-PLAN.md  AUD-L1-LICENSE.md  AUD-L1-MEM.md  AUD-L1-PARSE.md  AUD-L1-QUALITY.md  AUD-L1-SUPPLY.md  AUD-SEC.md  README.md
docs/superpowers/plans/: 2026-06-28-glintfx-v1.md  2026-06-30-glintfx-v0.2.3-data-model.md  2026-06-30-glintfx-v0.2.4.md  2026-06-30-glintfx-v2-f1-embed-mode.md  2026-06-30-glintfx-v2-f2-components.md  2026-07-02-glintfx-v0.2.5-hittest-viewport.md  2026-07-03-camada0-w1-pipeline-exit.md  (+4 more)
docs/wiki/: FAQ.md  Getting-Started.md  Home.md  Layer-0-Core.md  Layer-1-glintfx.md  README.md
glintfx/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  coverage-badge.json
glintfx/.superpowers/sdd/: fix-effects-report.md  glfw-optional-report.md
glintfx/cmake/: glintfxConfig.cmake.in
glintfx/demos/showcase/: CMakeLists.txt  capture.cpp  main.cpp  showcase.rcss  showcase.rml  showcase_test.rml
glintfx/demos/showcase/assets/: LICENSE-font.txt
glintfx/demos/showcase/golden/: showcase_reference.ppm
glintfx/docs/superpowers/plans/: 2026-07-20-framework2d-A3-audio-e-carving-uifx.md  2026-07-21-framework2d-A2-gamepad.md  2026-07-21-framework2d-window-modes.md  2026-07-22-framework2d-A4-emoji-colr.md  2026-07-22-framework2d-audio-F2.md  2026-07-22-onda2-input-host.md  2026-07-22-programa-completo.md  2026-07-23-onda3-draw2d-d2d1.md  2026-07-23-onda4-draw2d-camera.md  2026-07-23-onda5-draw2d-primitives.md  2026-07-24-onda6-draw2d-text.md
glintfx/include/glintfx/: app.hpp  audio.hpp  click_info.hpp  config.hpp.in  draw2d.hpp  element_box.hpp  font_engine.hpp  gamepad.hpp  gamepad_types.hpp  glintfx.hpp  i18n.hpp  ui_event.hpp  ui_layer.hpp  version.hpp  window_mode.hpp
glintfx/patches/: README.md  rmlui-2cd28864-teardown-ub.patch
glintfx/src/: app.cpp  audio.cpp  base_url_file_interface.hpp  bootstrap.cpp  bootstrap.hpp  data_binder.cpp  data_binder.hpp  decorator_gl_quad.hpp  decorator_image_tint.cpp  decorator_image_tint.hpp  decorator_polygon.cpp  decorator_polygon.hpp  decorator_ripple.cpp  decorator_ripple.hpp  draw2d.cpp  engine.cpp  engine.hpp  font_engine_own.cpp  font_engine_own.hpp  fx_hook.hpp  gamepad.cpp  gamepad_decode.cpp  gamepad_decode.hpp  gamepad_mapping.cpp  gamepad_mapping.hpp  gl_loader.c  gl_loader.h  gl_state.hpp  glfw_event_translate.hpp  i18n.cpp  image_decode.hpp  input_state.hpp  layer_queue.hpp  log_dedup.hpp  miniaudio_impl.c  primitives2d.hpp  render_gl3.cpp  render_gl3.hpp  sprite_batch.hpp  stb_image_impl.cpp  (+12 more)
glintfx/src/fx/: effects_gl3.cpp
glintfx/tests/: CMakeLists.txt  app_click_callback_smoke.cpp  app_dp_ratio_smoke.cpp  app_draw2d_smoke.cpp  app_element_box_smoke.cpp  app_frame_callback_smoke.cpp  app_input_hardening_smoke.cpp  app_input_query_smoke.cpp  app_process_event_scene.rcss  app_process_event_scene.rml  app_process_event_smoke.cpp  app_resize_smoke.cpp  app_scroll_smoke.cpp  app_smoke.cpp  app_window_mode_smoke.cpp  app_window_mode_transitions_smoke.cpp  asset_decode_hostile_sanity.cpp  audio_hostile_sanity.cpp  audio_lifecycle_sanity.cpp  audio_loop_fade_sanity.cpp  audio_playback_sanity.cpp  audio_polyphony_sanity.cpp  base_url_sanity.cpp  bootstrap_smoke.cpp  bu_scene.rcss  bu_scene.rml  capture.hpp  click_callback_sanity.cpp  click_scene.rcss  click_scene.rml  contract_consume.cmake  data_model_embed_sanity.cpp  data_model_embed_scene.rcss  data_model_embed_scene.rml  data_model_list.cpp  data_model_rebind_uaf.cpp  data_model_scalar.cpp  data_model_smoke.cpp  document_reload_leak.cpp  domrw_sanity.cpp  (+121 more)
glintfx/tests/ui/: hud.rml  log.rml  scalar.rml  tex.rml
glintfx/tests/win-atoms/: CMakeLists.txt
include/: alloc.h  alloc_internal.h  conv.h  limits.h  mem.h  mmap.h  printf.h  str.h  sys_exit.h  sys_mmap.h  sys_munmap.h  sys_read.h  sys_write.h  syscall.h  syscall_nums.h  syscall_nums.inc  test.h  types.h
include/core/: core.h  hint.h  raster.h  sfnt.h
src/: alloc.c  conv.c  core_api.c  hint.c  mem.c  printf.c  raster.c  sfnt.c  start.asm  str.c  sys_exit.c  sys_mmap.c  sys_munmap.c  sys_read.c  sys_write.c  syscall.asm
tests/: echo_stdin.c  exit42.c  expected_exit.txt  expected_stderr.txt  expected_stdout.txt  hello.c  libcore_consumer.cpp  negative_probe.c  printf_e2e.c  probe_iabs32.c  sanitize_hint.c  sanitize_raster.c  sanitize_sfnt.c  selftest.c  test_alloc.c  test_alloc_free.c  test_conv.c  test_hint.c  test_mem.c  test_printf.c  test_raster.c  test_sfnt.c  test_str.c
tests/golden/: negative_probe.expected  printf_e2e.expected
tools/: check_doc_line_refs.sh  check_encapsulation.sh  check_libcore_symbols.sh  check_spdx.sh  check_syscall_nums_sync.sh  coverage_report.sh  gen_colr_fixture.py  gen_gamepad_db.py  gen_glloader.py  preci.sh  precommit.sh
tools/ci/: Containerfile.f42  build_image.sh
(+3 files in other folders)
